cqrs layers addec and codes added

--- a/AWS-Serverless-StorageApplication.Queries/AWS-Serverless-StorageApplication.Queries.csproj
+++ b/AWS-Serverless-StorageApplication.Queries/AWS-Serverless-StorageApplication.Queries.csproj
@@ -7,4 +7,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="WriteQueries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AWS-Serverless-StorageApplication.Models\AWS-Serverless-StorageApplication.Models.csproj" />
+  </ItemGroup>
+
 </Project>
