--- a/AWS-Serverless-StorageApplication.Commands/AWS-Serverless-StorageApplication.Commands.csproj
+++ b/AWS-Serverless-StorageApplication.Commands/AWS-Serverless-StorageApplication.Commands.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AWS-Serverless-StorageApplication.Models\AWS-Serverless-StorageApplication.Models.csproj" />
+  </ItemGroup>
+
 </Project>
