--- a/AWS-Serverless-StorageApplication/AWS-Serverless-StorageApplication.csproj
+++ b/AWS-Serverless-StorageApplication/AWS-Serverless-StorageApplication.csproj
@@ -13,5 +13,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.3.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
   </ItemGroup>
 </Project>
