--- a/AWS-Serverless-StorageApplication.Controllers/AWS-Serverless-StorageApplication.Controllers.csproj
+++ b/AWS-Serverless-StorageApplication.Controllers/AWS-Serverless-StorageApplication.Controllers.csproj
@@ -7,4 +7,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AWS-Serverless-StorageApplication.Commands\AWS-Serverless-StorageApplication.Commands.csproj" />
+    <ProjectReference Include="..\AWS-Serverless-StorageApplication.Models\AWS-Serverless-StorageApplication.Models.csproj" />
+    <ProjectReference Include="..\AWS-Serverless-StorageApplication.Queries\AWS-Serverless-StorageApplication.Queries.csproj" />
+  </ItemGroup>
+
 </Project>
