--- a/AWS-Serverless-StorageApplication.Queries/AWS-Serverless-StorageApplication.Queries.csproj
+++ b/AWS-Serverless-StorageApplication.Queries/AWS-Serverless-StorageApplication.Queries.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="WriteQueries\" />
+    <Compile Remove="WriteQueries\**" />
+    <EmbeddedResource Remove="WriteQueries\**" />
+    <None Remove="WriteQueries\**" />
   </ItemGroup>
 
   <ItemGroup>
