--- a/AWS-Serverless-StorageApplication.Repositories/AWS-Serverless-StorageApplication.Repositories.csproj
+++ b/AWS-Serverless-StorageApplication.Repositories/AWS-Serverless-StorageApplication.Repositories.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AWS-Serverless-StorageApplication.Models\AWS-Serverless-StorageApplication.Models.csproj" />
+  </ItemGroup>
+
 </Project>
