--- a/AWS-Serverless-StorageApplication/AWS-Serverless-StorageApplication.csproj
+++ b/AWS-Serverless-StorageApplication/AWS-Serverless-StorageApplication.csproj
@@ -15,4 +15,7 @@
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.3.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AWS-Serverless-StorageApplication.Repositories\AWS-Serverless-StorageApplication.Repositories.csproj" />
+  </ItemGroup>
 </Project>
