--- a/AWS-Serverless-StorageApplication/Properties/launchSettings.json
+++ b/AWS-Serverless-StorageApplication/Properties/launchSettings.json
@@ -4,15 +4,17 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "AWS_ACCESS_KEY": "AKIAXIMIM2YU66EHBCXC",
+        "AWS_SECRET_KEY": "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"
       },
       "applicationUrl": "https://localhost:52398;http://localhost:52399"
     },
     "Mock Lambda Test Tool": {
       "commandName": "Executable",
+      "executablePath": "%USERPROFILE%\\.dotnet\\tools\\dotnet-lambda-test-tool-6.0.exe",
       "commandLineArgs": "--port 5050",
-      "workingDirectory": ".\\bin\\$(Configuration)\\net6.0",
-      "executablePath": "%USERPROFILE%\\.dotnet\\tools\\dotnet-lambda-test-tool-6.0.exe"
+      "workingDirectory": ".\\bin\\$(Configuration)\\net6.0"
     }
   }
 }
