--- a/AWS-Serverless-StorageApplication.Queries/AWS-Serverless-StorageApplication.Queries.csproj
+++ b/AWS-Serverless-StorageApplication.Queries/AWS-Serverless-StorageApplication.Queries.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.102" />
     <PackageReference Include="MediatR" Version="11.0.0" />
   </ItemGroup>
 
