--- a/AWS-Serverless-StorageApplication.Queries/AWS-Serverless-StorageApplication.Queries.csproj
+++ b/AWS-Serverless-StorageApplication.Queries/AWS-Serverless-StorageApplication.Queries.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.7.102" />
     <PackageReference Include="MediatR" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
   <ItemGroup>
