--- a/AWS-Serverless-StorageApplication/AWS-Serverless-StorageApplication.csproj
+++ b/AWS-Serverless-StorageApplication/AWS-Serverless-StorageApplication.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\AWS-Serverless-StorageApplication.EnvConfiguration\AWS-Serverless-StorageApplication.EnvConfiguration.csproj" />
     <ProjectReference Include="..\AWS-Serverless-StorageApplication.Handlers\AWS-Serverless-StorageApplication.Handlers.csproj" />
     <ProjectReference Include="..\AWS-Serverless-StorageApplication.Middleware\AWS-Serverless-StorageApplication.Middleware.csproj" />
+    <ProjectReference Include="..\AWS-Serverless-StorageApplication.Models\AWS-Serverless-StorageApplication.Models.csproj" />
     <ProjectReference Include="..\AWS-Serverless-StorageApplication.Repositories\AWS-Serverless-StorageApplication.Repositories.csproj" />
   </ItemGroup>
 </Project>
